# linkcode

./: .eslintrc.json  .gitignore  .npmrc  .pnpmfile.cjs  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SUPPORT.md  biome.json  design-qa.md  devenv.nix  devenv.yaml  eslint-suppressions.json  eslint.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  rust-toolchain.toml  skills-lock.json  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.agents/: resume  setup
.agents/orb/: cdp-proxy.cjs  desktop-vnc
.agents/skills/linear/: SKILL.md
.amp/: services.yaml
.claude/rules/: frontend.md
.github/: CONTRIBUTING.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/build-sidecar/: action.yml
.github/scripts/: release-automation.cjs  release-automation.test.mjs
.github/workflows/: build-desktop.yml  ci.yml  fast-forward.yml  finalize-releases.yml  r2-cleanup-once.yml  release-desktop.yml  release-please.yml
.zed/: settings.json
apps/daemon/: AGENTS.md  package.json  tsconfig.json  tsup.config.ts
apps/daemon/drizzle/: 0000_elite_master_mold.sql  0001_brainy_karen_page.sql  0002_common_thena.sql  0003_lame_talon.sql  0004_orange_living_mummy.sql  0005_stormy_thunderball.sql  0006_free_secret_warriors.sql
apps/daemon/e2e/: startup.e2e.ts  tsconfig.json
apps/daemon/scripts/: dev-clean.mts  package-daemon.mts
apps/daemon/src/: ai-gateway.ts  asar-spawn.ts  config.ts  diagnostic-sanitizer.ts  index.ts  instrument.ts  logger.ts  loop-store.ts  managed-agent-refresh.ts  paths.ts  provider-store.ts  runtime.ts  schedule-store.ts  session-store.ts  workspace-store.ts
apps/desktop/: AGENTS.md  CLAUDE.md  electron-builder.devshell.yml  electron-builder.release.yml  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json  turbo.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vite.shared.ts
apps/desktop/build-resources/: entitlements.mac.inherit.plist  (+1 more)
apps/mobile/: AGENTS.md  App.tsx  HEROUI_SETUP.md  app.json  babel.config.js  eas.json  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/server/: package.json  tsup.config.ts
apps/web/: index.html  package.json  vite.config.ts
apps/webview/: AGENTS.md  CLAUDE.md  index.html  package.json  tsconfig.json  turbo.json  vite.config.ts
assets/: BRAND.md  LICENSE
assets/linkcode.icon/: icon.json
crates/linkcode-pty/: Cargo.toml  PROTOCOL.md  README.md
crates/linkcode-pty/src/: credit.rs  main.rs  mux.rs  proto.rs  pty.rs
crates/linkcode-pty/tests/: smoke.rs
crates/linkcode-sim/: Cargo.toml  NOTICE  PROTOCOL.md  README.md
crates/linkcode-sim/src/: capture.rs  interactive.rs  main.rs  mask.rs  proto.rs  rpc.rs  simctl.rs
crates/linkcode-sim/src/private/: debug.rs  device.rs  framework.rs  input.rs  mod.rs  orientation.rs  screen.rs  vt.rs
crates/linkcode-sim/tests/: device_loop.rs  smoke.rs
crates/pty-host/: Cargo.toml
docs/: ARCHITECTURE.md  CLA.md  DEVELOPMENT.md  ENVIRONMENT.md  FORKING.md  README.zh-CN.md  RELEASE.md  SCHEMA-INDEX.md  mobile-chat-ui-design.md
patches/: app-builder-lib@26.15.3.patch
tools/: gen-schema-index.cjs
(+305 files in other folders)
