[workspace]
members = ["crates/linkcode-pty", "crates/linkcode-sim"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
authors = ["ArcBox Labs <team@arcbox.dev>"]
description = "Every Code Agent in the Palm of your hand"
homepage = "https://github.com/arcboxlabs/linkcode#readme"
repository = "https://github.com/arcboxlabs/linkcode"
license = "BUSL-1.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
