[package]
name = "linkcode-pty"
version.workspace = true
edition.workspace = true
publish.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "linkcode-pty"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[target."cfg(unix)".dependencies]
libc = "0.2.186"
