[package]
name = "linkcode-sim"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "linkcode-sim"
path = "src/main.rs"

[dependencies]
block2 = "0.6.2"
libc = "0.2.189"
objc2 = { version = "0.6.4", features = ["exception"] }
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
